# nitrixme

./: Cargo.toml  Dockerfile  README.md  go.mod  go.sum  index.html  main.go  main.rs
static/: index.gohtml  nitrix.gpg
templates/: homepage.html.hbs  index.gohtml
